--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hrevert/ht-customer-logo",
-    "description": "A Zend framework 2 module useful to provide logo upload funcationality",
+    "description": "A Zend framework 2 module useful to provide logo upload functionality",
     "type": "library",
     "keywords": [
         "zf2",
@@ -22,6 +22,7 @@
         "php": ">=5.4",
         "zendframework/zendframework": "2.2.*",
         "zf-commons/zfc-base": "0.1.2",
+        "ujjwal/h-commons": "1.3.*",
         "webino/webino-image-thumb": "dev-master"
     },
     "autoload": {
