--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
         "php": ">=5.4",
         "zendframework/zendframework": "2.2.*",
         "zf-commons/zfc-base": "0.1.2",
-        "ujjwal/h-commons": "1.3.*",
-        "webino/webino-image-thumb": "dev-master"
+        "hrevert/ht-img-module": "dev-master"
     },
     "autoload": {
         "psr-0": {
