--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "zendframework/zendframework": "2.2.*",
+        "zendframework/zendframework": "~2.1",
         "zf-commons/zfc-base": "0.1.2",
         "hrevert/ht-img-module": "dev-master"
     },
