Fixed homepage in composer.json

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "module",
         "zendframework"
     ],
-    "homepage": "https://github.com/hrevert/HtCustomerLogo",
+    "homepage": "https://bitbucket.org/hrevert/htcustomerlogo",
     "authors": [
         {
             "name": "Hrevert Technologies",
