--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "php": ">=5.4",
         "zendframework/zendframework": "~2.1",
         "zf-commons/zfc-base": "0.1.2",
-        "hrevert/ht-img-module": "0.0.*"
+        "hrevert/ht-img-module": "~0.0.2"
     },
     "autoload": {
         "psr-0": {
